fixed formating issues on mobile

--- a/index.css
+++ b/index.css
@@ -39,6 +39,7 @@ body{
     background-color:  rgb(37, 37, 37);
     color: white;
     width: 97%;   
+    height: 90%;
     padding-left: 1.5%;
     padding-right: 1.5%;
 }
